--- a/layouts/_default/sign-up.html
+++ b/layouts/_default/sign-up.html
@@ -1,3 +1,7 @@
+{{define "head"}}
+<script type="module" src="../js/other-input.js"></script>
+{{end}}
+
 {{define "main"}}
 <form class="sign-up-form">
     {{range .Params.form}}
