--- a/layouts/partials/radio-field.html
+++ b/layouts/partials/radio-field.html
@@ -12,6 +12,7 @@
         />
         {{if .text}}
         <input
+            class="field__input--other"
             type="text"
             name="{{.value}}"
             disabled
