--- a/layouts/partials/text-field.html
+++ b/layouts/partials/text-field.html
@@ -1,11 +1,14 @@
 <div class="field field--text">
-    <label class="field__label" for="{{.name}}">{{.label}}</label>
+    <label class="field__label field__label--text" for="{{.name}}">
+        {{.label}}
+    </label>
     <input
-        class="field__input"
+        class="field__input field__input--text"
         id="{{.name}}"
         name="{{.name}}"
         type='{{.type | default "text"}}'
         {{if .autocomplete}}autocomplete="{{.autocomplete}}"{{end}}
         required
+        placeholder="{{.placeholder}}"
     />
 </div>
